<resources>
    <string name="app_name">Android Tourism Application</string>
    <string name="register"><u>Register</u></string>
    <string name="Login">Login</string>
    <string name="Login2"><u>Login</u></string>
    <string name="skip"><u>Skip</u></string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign-Up</string>
    <string name="location">location</string>
    <string name="location_name">Location Name</string>
    <string-array name="description">
        <item>Lovely beach \n in Cullen</item>
        <item>Stunning beach in Luskentyre</item>
        <item>Great beach at Sutherland</item>
        <item>Gorgeous Beach in Fife</item>
    </string-array>
    <string name="map_api">AIzaSyBEhL9Yur-AoiMjWbi4oKDNLXhJ38Y8c2c</string>
    <string name="desc">Dunnottar Castle is a ruined medieval fortress located upon a rocky headland on the northeastern coast of Scotland, about 2 miles south of Stonehaven. \n \n The surviving buildings are largely of the 15th and 16th centuries, but the site is believed to have been fortified in the Early Middle Ages. \n \n   Dunnottar has played a prominent role in the history of Scotland through to the 18th-century Jacobite risings because of its strategic location and defensive strength.  \n \n  Dunnottar is best known as the place where the Honours of Scotland, the Scottish crown jewels, were hidden from Oliver Cromwell\'s invading army in the 17th century. The property of the Keiths from the 14th century, and the seat of the Earl Marischal, Dunnottar declined after the last Earl forfeited his titles by taking part in the Jacobite rebellion of 1715. The ruins of the castle are surrounded by steep cliffs that drop to the North Sea, 160 feet below.  \n \n  A narrow strip of land joins the headland to the mainland, along which a steep path leads up to the gatehouse. The various buildings within the castle include the 14th-century tower house as well as the 16th-century palace."</string>
    <string name="PAPdesc">The unbelievable stone cairn, which is one of eleven to be found on the estate, stands like a miniature version of those more famous pyramids built in Ancient Egypt. \n \n Erected by Queen Victoria, it was created in memory of her husband Prince Albert after his death in 1861, aged just 42. The huge four-sided structure was built using granite and is 41 feet by 41 feet at the base. A plaque on the unique monument reads: "To the beloved memory of Albert, the great and good prince and consort. Erected by his broken-hearted widow Victoria." \n \n The Queen also erected other cairns on the estate that she loved, with several built to commemorate the marriages of many of her children such as Beatrice, Helena and Leopold. Around the same area you\'ll also find the Crathie Kirk and a statue to John Brown, Queen Victoria\'s loyal servant of many years until his death in 1883 - with an inscription that describes him as a "friend more than a servant". \n \n  The cairns can be accessed via the Crathie car park. An enjoyable walk, it\'s worth checking ahead to ensure the estate is open to visitors.</string>
    <string name="linlithgow_palace">Linlithgow Palace</string>
    <string name="LINdesc">A royal manor existed on the site in the 12th century. It was replaced by a fortification known as "the Peel" built in the 14th century by occupying English forces under Edward I. \n \n The site of the manor made it an ideal military base for securing the supply routes between Edinburgh Castle and Stirling Castle. The English fort was begun in March 1302 under the supervision of priets Richard de Wynepol and Henry de Graundeston with help from the architect, Master James of St George In September 1302. \n \n Sixty men and 140 women helped dig the ditches; the men were paid twopence and the women a penny daily. One hundred foot-soldiers were still employed as labourers on the castle in November and work continued during the Summer of 1303. \n \n In September 1313, Linlithgow Peel was retaken for Scotland by an ordinary Scot named William Binning or Bunnock who was in the habit of selling hay to the garrison of the peel. \n  When the gate was opened for him, he halted his wagon so that it could not be closed, his eight compatriots leapt out from their hiding place under the hay, and they captured the peel for King Robert the Bruce. King Robert sent reinforcements and had the peel dismantled so that it could not be retaken by the English. \n \n In 1424, the town of Linlithgow was partially destroyed in a great fire. King James I started the rebuilding of the Palace as a grand residence for Scottish royalty, also beginning the rebuilding of the Church of St Michael immediately to the south of the palace: the earlier church had been used as a storeroom during Edward\'s occupation. Over the following century the palace developed into a formal courtyard structure, with significant additions by James III and James IV.</string>
    <string name="william_wallace_monument">William Wallace Monument</string>
    <string name="WALdesc">Stirling’s famous landmark stands above the fields where William Wallace led his troops to victory at The Battle of Stirling Bridge, and tells the story of the patriot and martyr who became Scotland’s National Hero \n \n  Over 700 years ago, tyranny and terror were the tools being used by England to rule Scotland. Occupied and oppressed, the Scottish nation sought a hero to challenge the cruelty of King Edward I. \n \n When the two countries faced each other at The Battle of Stirling Bridge in 1297, Scotland was led to victory by a figure destined to become a national hero – William Wallace. Wallace had a burning desire for peace and freedom which united the country’s clans, gained the loyalty of its people, struck fear into his enemies and defied the cruel hand of an evil, warring and invading king. \n \n Stirling was the main entry point to the north of Scotland, and it was here, that Wallace was encamped with his army.  The bridge (which was just upstream from the 15th century stone bridge that still stands today) was only wide enough for two horsemen to pass abreast, and on the 11th September the battle began as the English were forced to cross the bridge. \n \n Wallace and Andrew de Moray waited until more than half the English had made the crossing before springing their trap.  Scottish spearsmen charged down the causeway.  Those on the right flank forced their way along the river bank to the north end of the bridge, preventing the English from escaping. Those of the English army who survived the battle, including Warenne, retreated to Berwick. \n \n After his betrayal and capture, Wallace was taken to London, where he was tried.  He was found guilty, and cruelly executed on 23rd August 1305.  His death did not end Scotland’s Wars of Independence, and Robert the Bruce continued the fight, achieving victory at the Battle of Bannockburn in 1314. \n \n Over the years further elements were added to the Monument, including the Wallace Sword.  This impressive two-handed sword was first recorded in Dumbarton Castle in 1505. </string>
    <string name="sandwoodbaybeach">Sandwood Bay Beach</string>
    <string name="SANDdesc"> Reputedly the most beautiful beach in Britain, the wild and spectacular Sandwood Bay in Kinlochbervie is backed by huge sand dunes and a loch. \n \n Facing straight into the teeth of the North Atlantic, the beach has nearly 1.5 miles of wide pink sand which is flanked by cliffs. To the south stands the impressive sea stack of Am Buachaille, while behind the bay’s large dunes stretches Sandwood Loch - a freshwater loch full of brown trout and a great place to fish. The beach is considered to be one of the most unspoilt beaches in the whole of mainland Britain. \n \n This remote bay has no road access but can be reached by a 4 mile, well-trodden and fairly flat path leading from the gravel car park at the hamlet of Blairmore. \n \n The name Sandwood Bay probably derives from the Viking name \'Sandvatn\' ("sand water") and it is believed longboats were dragged across the sands into Sandwood Loch. \n \n There are also remains of Pictish settlement in the area. The area has been largely uninhabited since 1847 when the land was cleared for sheep farming as part of the Highland Clearances. A number of shepherds huts remained and were occasionally occupied until around 1940. \n \n On 30 September 1941, Sergeant Michael Kilburn from 124 Squadron at RAF Castletown was flying a Spitfire south west of Cape Wrath when the engine failed. He crash-landed the plane on the beach at Sandwood, and managed to escape uninjured. The wreck remained on the beach and over time the entire bodywork was eroded away by the sea but its engine, a Rolls Royce Merlin, remains largely intact and occasionally emerges into full view whenever tidal and weather conditions permit.</string>
    <string name="cullen">Cullen Beach</string>
    <string name="CULLENdesc">Cullen Beach is an attractive sandy beach with excellent water quality and plenty of space for you to relax and sunbathe or get up and play beach volleyball. \n \n  Cullen Beach is a wide expanse of golden sand and is one of the most stunning beaches in all of Scotland. This beach has more to offer than just the beach, it is a great location to be outdoors doing other activities. \n \n The beach sits in front of Cullen Golf Course and there are plenty of coastal walks and trails to follow. Cullen Bay is well sheltered by the surrounding cliffs and moray dolphins are often spotted from the beach and bay. \n \n most magnificent of all as you come down the hill from the town is Cullen Bay with the isolated sea stacks known as the \'Three Kings\', which rise up from the sands. \n \n They are said to be grave markers of 3 Norse Kings who died at the Battle of Bauds in 962 ~ The first mention of Cullen in Scottish history was in 962 when King Indulf was killed by the Norwegians (and/or Danes) at the mouth of the river Cullen and referred to as the Battle of the Bauds  \n \n "Atween Coedlich and the sea, There lies Kings\' sons three."  Legend has it that within the vicinity, a Scots, Danish and a Norwegian King are buried, marked by the three isolated rocks within Cullen Bay and named the "Three Kings". <br /> <br /> There is free car parking underneath the viaduct with facilities beside the golf clubhouse. There are plenty of shops in Cullen town centre, however in the summer months the beach is often serviced by an ice cream van.</string>
    <string name="luskentyre">Luskentyre Sands</string>
    <string name="delete_account">Delete Account</string>
    <string name="night_mode">Night Mode   </string>
    <string name="notifcations">Notifcations</string>
    <string name="locationsettings">Location</string>
    <string name="location1">Location</string>
    <string name="todo">TODO</string>
</resources>