<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:id="@+id/mainLayout"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="50dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color4"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">


            <ImageView
                android:id="@+id/myImageView"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/myText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="125dp"
                android:gravity="center_horizontal"
                android:text="@string/location1"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/myText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="125dp"
                android:layout_marginTop="80dp"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:text="@string/description"
                android:textSize="16sp" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>