<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginimage"
    tools:ignore="labelFor">


    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="80dp"
        android:autofillHints="email"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_stat_username"
        android:ems="10"
        android:hint="Email"
        android:textSize="22sp"
        android:drawablePadding="10dp"
        android:inputType="text"
        android:text="Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="80dp"
        android:autofillHints="Password"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_stat_password"
        android:ems="10"
        android:hint="@string/password"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="80dp"
        android:autofillHints="Confirm Password"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_stat_password"
        android:ems="10"
        android:textSize="22sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawablePadding="10dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Login2"
        android:textColor="#0000EE"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSU"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/button"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/skip"
        android:textColor="#0000EE"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="307dp"
        android:layout_height="243dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


</androidx.constraintlayout.widget.ConstraintLayout>