<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color4"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:id="@+id/toolbar"
                android:elevation="4dp">

            </androidx.appcompat.widget.Toolbar>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">



            <TextView
                android:id="@+id/deleteaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button2"
                android:paddingHorizontal="50dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/delete_account"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/nightmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="85dp"
                android:layout_marginEnd="85dp"
                android:layout_marginBottom="35dp"
                android:background="@drawable/settingsbackground"
                android:paddingHorizontal="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:switchPadding="10dp"
                android:text="@string/night_mode"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/notifications"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="82dp"
                android:layout_marginEnd="82dp"
                android:layout_marginBottom="35dp"
                android:background="@drawable/settingsbackground"
                android:paddingHorizontal="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:switchPadding="10dp"
                android:text="@string/notifcations"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/font"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="84dp"
                android:layout_marginEnd="84dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/settingsbackground"
                android:paddingHorizontal="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:switchPadding="35dp"
                android:text="@string/locationsettings"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/deleteaccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="82dp"
                android:layout_marginEnd="81dp"
                android:layout_marginBottom="35dp"
                android:background="@drawable/settingsbackground"
                android:paddingHorizontal="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:switchPadding="25dp"
                android:text="Large Text"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


            </androidx.constraintlayout.widget.ConstraintLayout>




            <androidx.viewpager.widget.ViewPager
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/container"
                />




        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:id="@+id/nav_view"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/drawer_menu"
            android:layout_marginTop="80dp"
            />


    </androidx.drawerlayout.widget.DrawerLayout>




